--- a/portafolio.html
+++ b/portafolio.html
@@ -101,7 +101,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 portfolio-item">
+
+                <div class="col-md-4 col-sm-6  portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portafolio/portafolio.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Portafolio</h4>
+                        <p class="text-muted">FRONTEND</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -115,7 +130,20 @@
                         <p class="text-muted">BACKEND Y FRONTEND</p>
                     </div>
                 </div>
-
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portafolio/PVenta-app-1.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>App PVenta</h4>
+                        <p class="text-muted">BACKEND Y FRONTEND</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -133,7 +161,8 @@
                 <div class="team-member">
                         <img src="https://graph.facebook.com/1010828735628014/picture?type=large&return_ssl_resources=1" class="img-responsive img-circle" alt="">
                         <h4>Abraham Rodarte Flores</h4>
-                        <p class="text-muted">BACK END</p>
+                        <p class="text-muted"> Visita mi perfil de <a href="https://platzi.com/usuarios/ezla/">BACK END</a> en platzi.</p>
+
                         
                 </div>
 
@@ -197,7 +226,7 @@
                             </div>
                             <div class="timeline-body">
                               <p>
-                                  Android
+                                  Android Developer Senior
                               </p>
                             </div>
                           </div>
@@ -323,6 +352,80 @@
     <!-- Portafolio Modals -->
     
 
+    <!-- Portafolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Detalles del proyecto-->
+                            <h2>Portafolio</h2>
+                            <p class="item-intro text-muted">Curriculum Vitae</p>
+                            <img class="img-responsive" src="img/portafolio/portafolio.png" alt="">
+                            <p>
+                               Pagina para mostrar mi perfil academoco y mis habilidades.
+                                Es esta misma pag.
+                            </p>
+
+                            <ul class="list-inline">
+                                <li>Fecha: 2015</li>
+                                <li>Cliente: Todo mundo</li>
+                                <li>Categoria: Diseño web</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portafolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Detalles del proyecto-->
+                            <h2>App PVenta</h2>
+                            <p class="item-intro text-muted">Proyecto personal</p>
+                            <img class="img-responsive" src="img/portafolio/PVenta-app-2.png" alt="">
+                            <p>
+                                Proyecto para implementar en un negocio de compraventa de utiles escolares (papeleria)
+                                para mis padres; el proyecto se encuentra en estado de desarrollo, hasta la fecha ya
+                                cuenta con funcionalidades de inventario, ventas con imprecion tickets, administracion
+                                de usuarios y un sistema de notificaciónes.
+
+                            </p>
+                            <p>
+                                Puedes consultar el codifo en: <a href="https://github.com/Ezla/PVenta">github</a></p>
+                            <ul class="list-inline">
+                                <li>Fecha: 2015</li>
+                                <li>Cliente: N/A</li>
+                                <li>Categoria: Desarrollo y Diseño web</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Portafolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -350,7 +453,7 @@
                             <ul class="list-inline">
                                 <li>Fecha: 2014</li>
                                 <li>Cliente: DIF municipal de Villanueva</li>
-                                <li>Categoria: Desarrollo y diseño</li>
+                                <li>Categoria: Desarrollo y Diseño web</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
                         </div>
@@ -359,7 +462,6 @@
             </div>
         </div>
     </div>
-
 
 
 	<script src="js/jquery-1.11.1.min.js"></script>
